--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/contact">Contact</a></li>
+              <li><a ng-href="#/tes">Tes</a></li>
             </ul>
           </div>
         </div>
@@ -91,6 +92,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/contact.js"></script>
+        <script src="scripts/controllers/tes.js"></script>
         <!-- endbuild -->
 </body>
 </html>
